Add log writer api
