# dataset-service/api/log.pb.go
@@ -21,58 +21,58 @@ const (
 )
 
 // LogType supported by UPI
-type LogType int32
+type LogMetadataType int32
 
 const (
-	LogType_LOG_TYPE_UNSPECIFIED LogType = 0
+	LogMetadataType_LOG_METADATA_TYPE_UNSPECIFIED LogMetadataType = 0
 	// Log from Prediction service
-	LogType_LOG_TYPE_PREDICTION LogType = 1
+	LogMetadataType_LOG_METADATA_TYPE_PREDICTION LogMetadataType = 1
 	// Log from Observation service
-	LogType_LOG_TYPE_OBSERVATION LogType = 2
+	LogMetadataType_LOG_METADATA_TYPE_OBSERVATION LogMetadataType = 2
 	// Log from Router service
-	LogType_LOG_TYPE_ROUTER LogType = 3
+	LogMetadataType_LOG_METADATA_TYPE_ROUTER LogMetadataType = 3
 )
 
-// Enum value maps for LogType.
+// Enum value maps for LogMetadataType.
 var (
-	LogType_name = map[int32]string{
-		0: "LOG_TYPE_UNSPECIFIED",
-		1: "LOG_TYPE_PREDICTION",
-		2: "LOG_TYPE_OBSERVATION",
-		3: "LOG_TYPE_ROUTER",
+	LogMetadataType_name = map[int32]string{
+		0: "LOG_METADATA_TYPE_UNSPECIFIED",
+		1: "LOG_METADATA_TYPE_PREDICTION",
+		2: "LOG_METADATA_TYPE_OBSERVATION",
+		3: "LOG_METADATA_TYPE_ROUTER",
 	}
-	LogType_value = map[string]int32{
-		"LOG_TYPE_UNSPECIFIED": 0,
-		"LOG_TYPE_PREDICTION":  1,
-		"LOG_TYPE_OBSERVATION": 2,
-		"LOG_TYPE_ROUTER":      3,
+	LogMetadataType_value = map[string]int32{
+		"LOG_METADATA_TYPE_UNSPECIFIED": 0,
+		"LOG_METADATA_TYPE_PREDICTION":  1,
+		"LOG_METADATA_TYPE_OBSERVATION": 2,
+		"LOG_METADATA_TYPE_ROUTER":      3,
 	}
 )
 
-func (x LogType) Enum() *LogType {
-	p := new(LogType)
+func (x LogMetadataType) Enum() *LogMetadataType {
+	p := new(LogMetadataType)
 	*p = x
 	return p
 }
 
-func (x LogType) String() string {
+func (x LogMetadataType) String() string {
 	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
 }
 
-func (LogType) Descriptor() protoreflect.EnumDescriptor {
+func (LogMetadataType) Descriptor() protoreflect.EnumDescriptor {
 	return file_caraml_timber_v1_log_proto_enumTypes[0].Descriptor()
 }
 
-func (LogType) Type() protoreflect.EnumType {
+func (LogMetadataType) Type() protoreflect.EnumType {
 	return &file_caraml_timber_v1_log_proto_enumTypes[0]
 }
 
-func (x LogType) Number() protoreflect.EnumNumber {
+func (x LogMetadataType) Number() protoreflect.EnumNumber {
 	return protoreflect.EnumNumber(x)
 }
 
-// Deprecated: Use LogType.Descriptor instead.
-func (LogType) EnumDescriptor() ([]byte, []int) {
+// Deprecated: Use LogMetadataType.Descriptor instead.
+func (LogMetadataType) EnumDescriptor() ([]byte, []int) {
 	return file_caraml_timber_v1_log_proto_rawDescGZIP(), []int{0}
 }
 
@@ -155,7 +155,7 @@ type LogMetadata struct {
 	// Name of the log, generated by Dataset Service.
 	Name string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
 	// Source of the log.
-	Type LogType `protobuf:"varint,3,opt,name=type,proto3,enum=caraml.timber.v1.LogType" json:"type,omitempty"`
+	Type LogMetadataType `protobuf:"varint,3,opt,name=type,proto3,enum=caraml.timber.v1.LogMetadataType" json:"type,omitempty"`
 	// List of target names associated with a log.
 	TargetNames []string `protobuf:"bytes,4,rep,name=target_names,json=targetNames,proto3" json:"target_names,omitempty"`
 	// BQ table ID where the data is stored.
@@ -210,11 +210,11 @@ func (x *LogMetadata) GetName() string {
 	return ""
 }
 
-func (x *LogMetadata) GetType() LogType {
+func (x *LogMetadata) GetType() LogMetadataType {
 	if x != nil {
 		return x.Type
 	}
-	return LogType_LOG_TYPE_UNSPECIFIED
+	return LogMetadataType_LOG_METADATA_TYPE_UNSPECIFIED
 }
 
 func (x *LogMetadata) GetTargetNames() []string {
@@ -248,41 +248,45 @@ var file_caraml_timber_v1_log_proto_rawDesc = []byte{
 	0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a,
 	0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d,
 	0x65, 0x12, 0x18, 0x0a, 0x07, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x18, 0x03, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x07, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x22, 0xe0, 0x01, 0x0a, 0x0b,
+	0x28, 0x09, 0x52, 0x07, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x22, 0xe8, 0x01, 0x0a, 0x0b,
 	0x4c, 0x6f, 0x67, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x12, 0x0e, 0x0a, 0x02, 0x69,
 	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x6e,
 	0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12,
-	0x2d, 0x0a, 0x04, 0x74, 0x79, 0x70, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x19, 0x2e,
+	0x35, 0x0a, 0x04, 0x74, 0x79, 0x70, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x0e, 0x32, 0x21, 0x2e,
 	0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2e, 0x74, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x2e, 0x76, 0x31,
-	0x2e, 0x4c, 0x6f, 0x67, 0x54, 0x79, 0x70, 0x65, 0x52, 0x04, 0x74, 0x79, 0x70, 0x65, 0x12, 0x21,
-	0x0a, 0x0c, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x18, 0x04,
-	0x20, 0x03, 0x28, 0x09, 0x52, 0x0b, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x4e, 0x61, 0x6d, 0x65,
-	0x73, 0x12, 0x19, 0x0a, 0x08, 0x62, 0x71, 0x5f, 0x74, 0x61, 0x62, 0x6c, 0x65, 0x18, 0x05, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x07, 0x62, 0x71, 0x54, 0x61, 0x62, 0x6c, 0x65, 0x12, 0x40, 0x0a, 0x0c,
-	0x6c, 0x6f, 0x67, 0x5f, 0x70, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x65, 0x72, 0x18, 0x06, 0x20, 0x01,
-	0x28, 0x0b, 0x32, 0x1d, 0x2e, 0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2e, 0x74, 0x69, 0x6d, 0x62,
-	0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x6f, 0x67, 0x50, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x65,
-	0x72, 0x52, 0x0b, 0x6c, 0x6f, 0x67, 0x50, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x65, 0x72, 0x2a, 0x6b,
-	0x0a, 0x07, 0x4c, 0x6f, 0x67, 0x54, 0x79, 0x70, 0x65, 0x12, 0x18, 0x0a, 0x14, 0x4c, 0x4f, 0x47,
-	0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45,
-	0x44, 0x10, 0x00, 0x12, 0x17, 0x0a, 0x13, 0x4c, 0x4f, 0x47, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f,
-	0x50, 0x52, 0x45, 0x44, 0x49, 0x43, 0x54, 0x49, 0x4f, 0x4e, 0x10, 0x01, 0x12, 0x18, 0x0a, 0x14,
-	0x4c, 0x4f, 0x47, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x4f, 0x42, 0x53, 0x45, 0x52, 0x56, 0x41,
-	0x54, 0x49, 0x4f, 0x4e, 0x10, 0x02, 0x12, 0x13, 0x0a, 0x0f, 0x4c, 0x4f, 0x47, 0x5f, 0x54, 0x59,
-	0x50, 0x45, 0x5f, 0x52, 0x4f, 0x55, 0x54, 0x45, 0x52, 0x10, 0x03, 0x42, 0xc9, 0x01, 0x0a, 0x14,
-	0x63, 0x6f, 0x6d, 0x2e, 0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2e, 0x74, 0x69, 0x6d, 0x62, 0x65,
-	0x72, 0x2e, 0x76, 0x31, 0x42, 0x08, 0x4c, 0x6f, 0x67, 0x50, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x01,
-	0x5a, 0x45, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63, 0x61, 0x72,
-	0x61, 0x6d, 0x6c, 0x2d, 0x64, 0x65, 0x76, 0x2f, 0x74, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x2f, 0x64,
-	0x61, 0x74, 0x61, 0x73, 0x65, 0x74, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x61,
-	0x70, 0x69, 0x2f, 0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2f, 0x74, 0x69, 0x6d, 0x62, 0x65, 0x72,
-	0x2f, 0x76, 0x31, 0x3b, 0x61, 0x70, 0x69, 0xa2, 0x02, 0x03, 0x43, 0x54, 0x58, 0xaa, 0x02, 0x10,
-	0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2e, 0x54, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x2e, 0x56, 0x31,
-	0xca, 0x02, 0x10, 0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x5c, 0x54, 0x69, 0x6d, 0x62, 0x65, 0x72,
-	0x5c, 0x56, 0x31, 0xe2, 0x02, 0x1c, 0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x5c, 0x54, 0x69, 0x6d,
-	0x62, 0x65, 0x72, 0x5c, 0x56, 0x31, 0x5c, 0x47, 0x50, 0x42, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61,
-	0x74, 0x61, 0xea, 0x02, 0x12, 0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x3a, 0x3a, 0x54, 0x69, 0x6d,
-	0x62, 0x65, 0x72, 0x3a, 0x3a, 0x56, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x2e, 0x4c, 0x6f, 0x67, 0x4d, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x54, 0x79, 0x70, 0x65,
+	0x52, 0x04, 0x74, 0x79, 0x70, 0x65, 0x12, 0x21, 0x0a, 0x0c, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74,
+	0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x18, 0x04, 0x20, 0x03, 0x28, 0x09, 0x52, 0x0b, 0x74, 0x61,
+	0x72, 0x67, 0x65, 0x74, 0x4e, 0x61, 0x6d, 0x65, 0x73, 0x12, 0x19, 0x0a, 0x08, 0x62, 0x71, 0x5f,
+	0x74, 0x61, 0x62, 0x6c, 0x65, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x62, 0x71, 0x54,
+	0x61, 0x62, 0x6c, 0x65, 0x12, 0x40, 0x0a, 0x0c, 0x6c, 0x6f, 0x67, 0x5f, 0x70, 0x72, 0x6f, 0x64,
+	0x75, 0x63, 0x65, 0x72, 0x18, 0x06, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1d, 0x2e, 0x63, 0x61, 0x72,
+	0x61, 0x6d, 0x6c, 0x2e, 0x74, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x2e, 0x4c, 0x6f,
+	0x67, 0x50, 0x72, 0x6f, 0x64, 0x75, 0x63, 0x65, 0x72, 0x52, 0x0b, 0x6c, 0x6f, 0x67, 0x50, 0x72,
+	0x6f, 0x64, 0x75, 0x63, 0x65, 0x72, 0x2a, 0x97, 0x01, 0x0a, 0x0f, 0x4c, 0x6f, 0x67, 0x4d, 0x65,
+	0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x54, 0x79, 0x70, 0x65, 0x12, 0x21, 0x0a, 0x1d, 0x4c, 0x4f,
+	0x47, 0x5f, 0x4d, 0x45, 0x54, 0x41, 0x44, 0x41, 0x54, 0x41, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f,
+	0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00, 0x12, 0x20, 0x0a,
+	0x1c, 0x4c, 0x4f, 0x47, 0x5f, 0x4d, 0x45, 0x54, 0x41, 0x44, 0x41, 0x54, 0x41, 0x5f, 0x54, 0x59,
+	0x50, 0x45, 0x5f, 0x50, 0x52, 0x45, 0x44, 0x49, 0x43, 0x54, 0x49, 0x4f, 0x4e, 0x10, 0x01, 0x12,
+	0x21, 0x0a, 0x1d, 0x4c, 0x4f, 0x47, 0x5f, 0x4d, 0x45, 0x54, 0x41, 0x44, 0x41, 0x54, 0x41, 0x5f,
+	0x54, 0x59, 0x50, 0x45, 0x5f, 0x4f, 0x42, 0x53, 0x45, 0x52, 0x56, 0x41, 0x54, 0x49, 0x4f, 0x4e,
+	0x10, 0x02, 0x12, 0x1c, 0x0a, 0x18, 0x4c, 0x4f, 0x47, 0x5f, 0x4d, 0x45, 0x54, 0x41, 0x44, 0x41,
+	0x54, 0x41, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x52, 0x4f, 0x55, 0x54, 0x45, 0x52, 0x10, 0x03,
+	0x42, 0xc9, 0x01, 0x0a, 0x14, 0x63, 0x6f, 0x6d, 0x2e, 0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2e,
+	0x74, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x2e, 0x76, 0x31, 0x42, 0x08, 0x4c, 0x6f, 0x67, 0x50, 0x72,
+	0x6f, 0x74, 0x6f, 0x50, 0x01, 0x5a, 0x45, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
+	0x6d, 0x2f, 0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2d, 0x64, 0x65, 0x76, 0x2f, 0x74, 0x69, 0x6d,
+	0x62, 0x65, 0x72, 0x2f, 0x64, 0x61, 0x74, 0x61, 0x73, 0x65, 0x74, 0x2d, 0x73, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x63, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2f, 0x74,
+	0x69, 0x6d, 0x62, 0x65, 0x72, 0x2f, 0x76, 0x31, 0x3b, 0x61, 0x70, 0x69, 0xa2, 0x02, 0x03, 0x43,
+	0x54, 0x58, 0xaa, 0x02, 0x10, 0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x2e, 0x54, 0x69, 0x6d, 0x62,
+	0x65, 0x72, 0x2e, 0x56, 0x31, 0xca, 0x02, 0x10, 0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c, 0x5c, 0x54,
+	0x69, 0x6d, 0x62, 0x65, 0x72, 0x5c, 0x56, 0x31, 0xe2, 0x02, 0x1c, 0x43, 0x61, 0x72, 0x61, 0x6d,
+	0x6c, 0x5c, 0x54, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x5c, 0x56, 0x31, 0x5c, 0x47, 0x50, 0x42, 0x4d,
+	0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0xea, 0x02, 0x12, 0x43, 0x61, 0x72, 0x61, 0x6d, 0x6c,
+	0x3a, 0x3a, 0x54, 0x69, 0x6d, 0x62, 0x65, 0x72, 0x3a, 0x3a, 0x56, 0x31, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -300,12 +304,12 @@ func file_caraml_timber_v1_log_proto_rawDescGZIP() []byte {
 var file_caraml_timber_v1_log_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
 var file_caraml_timber_v1_log_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_caraml_timber_v1_log_proto_goTypes = []interface{}{
-	(LogType)(0),        // 0: caraml.timber.v1.LogType
-	(*LogProducer)(nil), // 1: caraml.timber.v1.LogProducer
-	(*LogMetadata)(nil), // 2: caraml.timber.v1.LogMetadata
+	(LogMetadataType)(0), // 0: caraml.timber.v1.LogMetadataType
+	(*LogProducer)(nil),  // 1: caraml.timber.v1.LogProducer
+	(*LogMetadata)(nil),  // 2: caraml.timber.v1.LogMetadata
 }
 var file_caraml_timber_v1_log_proto_depIdxs = []int32{
-	0, // 0: caraml.timber.v1.LogMetadata.type:type_name -> caraml.timber.v1.LogType
+	0, // 0: caraml.timber.v1.LogMetadata.type:type_name -> caraml.timber.v1.LogMetadataType
 	1, // 1: caraml.timber.v1.LogMetadata.log_producer:type_name -> caraml.timber.v1.LogProducer
 	2, // [2:2] is the sub-list for method output_type
 	2, // [2:2] is the sub-list for method input_type
