# dataset-service/docs/openapiv2/caraml/timber/v1/dataset_service.swagger.json
@@ -594,7 +594,7 @@
           "description": "Name of the log, generated by Dataset Service."
         },
         "type": {
-          "$ref": "#/definitions/v1LogType",
+          "$ref": "#/definitions/v1LogMetadataType",
           "description": "Source of the log."
         },
         "targetNames": {
@@ -615,6 +615,18 @@
       },
       "title": "LogMetadata is an entity/metadata in Dataset Service that represents an append-only\ndata produced by ingesting the observation, prediction, or router logs"
     },
+    "v1LogMetadataType": {
+      "type": "string",
+      "enum": [
+        "LOG_METADATA_TYPE_UNSPECIFIED",
+        "LOG_METADATA_TYPE_PREDICTION",
+        "LOG_METADATA_TYPE_OBSERVATION",
+        "LOG_METADATA_TYPE_ROUTER"
+      ],
+      "default": "LOG_METADATA_TYPE_UNSPECIFIED",
+      "description": "- LOG_METADATA_TYPE_PREDICTION: Log from Prediction service\n - LOG_METADATA_TYPE_OBSERVATION: Log from Observation service\n - LOG_METADATA_TYPE_ROUTER: Log from Router service",
+      "title": "LogType supported by UPI"
+    },
     "v1LogProducer": {
       "type": "object",
       "properties": {
@@ -633,38 +645,30 @@
       },
       "title": "LogProducer describes the service that generates the log"
     },
-    "v1LogType": {
-      "type": "string",
-      "enum": [
-        "LOG_TYPE_UNSPECIFIED",
-        "LOG_TYPE_PREDICTION",
-        "LOG_TYPE_OBSERVATION",
-        "LOG_TYPE_ROUTER"
-      ],
-      "default": "LOG_TYPE_UNSPECIFIED",
-      "description": "- LOG_TYPE_PREDICTION: Log from Prediction service\n - LOG_TYPE_OBSERVATION: Log from Observation service\n - LOG_TYPE_ROUTER: Log from Router service",
-      "title": "LogType supported by UPI"
-    },
     "v1LogWriter": {
       "type": "object",
       "properties": {
         "projectId": {
           "type": "string",
           "format": "int64",
-          "title": "Project id that owns the observation service"
+          "title": "Project id that owns the log writer"
         },
         "id": {
           "type": "string",
           "format": "int64",
-          "title": "Observation service id"
+          "title": "Log writer's ID"
         },
         "name": {
           "type": "string",
-          "title": "Observation service name"
+          "title": "Name of the log writer"
+        },
+        "source": {
+          "$ref": "#/definitions/v1LogWriterSource",
+          "title": "Log writer source"
         },
         "status": {
           "$ref": "#/definitions/timberv1Status",
-          "title": "Status of the observation service"
+          "title": "TODO: Add details of where the log is stored at\nStatus of the observation service"
         },
         "createTime": {
           "type": "string",
@@ -678,6 +682,34 @@
         }
       },
       "title": "LogWriter describes details of a Log Writer"
+    },
+    "v1LogWriterSource": {
+      "type": "object",
+      "properties": {
+        "logType": {
+          "$ref": "#/definitions/v1LogWriterSourceType",
+          "description": "Log type. It determines whether prediction_log_source or router_log_source is populated.\nIf the value is LOG_TYPE_PREDICTION_LOG, then prediction_log_source should be valid.\nWhereas, if the value is LOG_TYPE_ROUTER_LOG, then router_log_source should be valid."
+        },
+        "predictionLogSource": {
+          "$ref": "#/definitions/v1PredictionLogSource",
+          "title": "Prediction log source details"
+        },
+        "routerLogSource": {
+          "$ref": "#/definitions/v1RouterLogSource",
+          "title": "Router log source details"
+        }
+      },
+      "title": "Details of the log writer data source"
+    },
+    "v1LogWriterSourceType": {
+      "type": "string",
+      "enum": [
+        "LOG_WRITER_SOURCE_TYPE_UNSPECIFIED",
+        "LOG_WRITER_SOURCE_TYPE_PREDICTION_LOG",
+        "LOG_WRITER_SOURCE_TYPE_ROUTER_LOG"
+      ],
+      "default": "LOG_WRITER_SOURCE_TYPE_UNSPECIFIED",
+      "title": "- LOG_WRITER_SOURCE_TYPE_UNSPECIFIED: log type is not specified\n - LOG_WRITER_SOURCE_TYPE_PREDICTION_LOG: log type for consuming prediction log\n - LOG_WRITER_SOURCE_TYPE_ROUTER_LOG: log type for consuming router log"
     },
     "v1ObservationService": {
       "type": "object",
@@ -697,12 +729,12 @@
           "title": "Observation service name"
         },
         "source": {
-          "$ref": "#/definitions/v1Source",
+          "$ref": "#/definitions/v1ObservationServiceSource",
           "description": "Configuration for pull-based Observation Service data source."
         },
         "status": {
           "$ref": "#/definitions/timberv1Status",
-          "title": "Status of the observation service"
+          "title": "TODO: Add details of where the log is stored at\nStatus of the observation service"
         },
         "createTime": {
           "type": "string",
@@ -717,22 +749,11 @@
       },
       "title": "ObservationServiceConfig describes details of a Observation Service"
     },
-    "v1ObservationServiceDataSourceType": {
-      "type": "string",
-      "enum": [
-        "OBSERVATION_SERVICE_DATA_SOURCE_TYPE_UNSPECIFIED",
-        "OBSERVATION_SERVICE_DATA_SOURCE_TYPE_EAGER",
-        "OBSERVATION_SERVICE_DATA_SOURCE_TYPE_KAFKA"
-      ],
-      "default": "OBSERVATION_SERVICE_DATA_SOURCE_TYPE_UNSPECIFIED",
-      "description": "- OBSERVATION_SERVICE_DATA_SOURCE_TYPE_EAGER: No-Op represents no need to fetch logs from any data source, this should be selected if\nObservation Service should be deployed for just the eager API\n - OBSERVATION_SERVICE_DATA_SOURCE_TYPE_KAFKA: Observation Service will poll logs from a Kafka source",
-      "title": "Data source where Observation logs should be retrieved from"
-    },
-    "v1Source": {
+    "v1ObservationServiceSource": {
       "type": "object",
       "properties": {
         "type": {
-          "$ref": "#/definitions/v1ObservationServiceDataSourceType",
+          "$ref": "#/definitions/v1ObservationServiceSourceType",
           "title": "Data source of the observation service"
         },
         "kafka": {
@@ -741,6 +762,54 @@
         }
       },
       "title": "Configurations of Data source where Observation logs should be retrieved from"
+    },
+    "v1ObservationServiceSourceType": {
+      "type": "string",
+      "enum": [
+        "OBSERVATION_SERVICE_SOURCE_TYPE_UNSPECIFIED",
+        "OBSERVATION_SERVICE_SOURCE_TYPE_EAGER",
+        "OBSERVATION_SERVICE_SOURCE_TYPE_KAFKA"
+      ],
+      "default": "OBSERVATION_SERVICE_SOURCE_TYPE_UNSPECIFIED",
+      "description": "- OBSERVATION_SERVICE_SOURCE_TYPE_EAGER: No-Op represents no need to fetch logs from any data source, this should be selected if\nObservation Service should be deployed for just the eager API\n - OBSERVATION_SERVICE_SOURCE_TYPE_KAFKA: Observation Service will poll logs from a Kafka source",
+      "title": "Data source where Observation logs should be retrieved from"
+    },
+    "v1PredictionLogSource": {
+      "type": "object",
+      "properties": {
+        "modelId": {
+          "type": "string",
+          "format": "int64",
+          "title": "id of the model producing the prediction log"
+        },
+        "modelName": {
+          "type": "string",
+          "title": "name of the model producing the prediction log"
+        },
+        "kafka": {
+          "$ref": "#/definitions/v1KafkaConfig",
+          "title": "kafka source configuration where the prediction logs are located"
+        }
+      },
+      "title": "Prediction log source details"
+    },
+    "v1RouterLogSource": {
+      "type": "object",
+      "properties": {
+        "routerId": {
+          "type": "string",
+          "format": "int64",
+          "title": "id of the router producing the router logs"
+        },
+        "routerName": {
+          "type": "string",
+          "title": "name of the router producing the router logs"
+        },
+        "kafka": {
+          "$ref": "#/definitions/v1KafkaConfig",
+          "title": "kafka source configuration where the router logs are located"
+        }
+      }
     },
     "v1UpdateLogWriterResponse": {
       "type": "object",
